--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
-    <title>Chat Room</title>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <title></title>
   <style type="text/css">
@@ -15,7 +13,7 @@ body {
   font-family: "Calibri", "Roboto", sans-serif;
 }
 
-#chat-log {
+.chat_window {
   position: absolute;
   width: calc(100% - 20px);
   max-width: 800px;
@@ -165,7 +163,7 @@ body {
   position: relative;
   padding: 0 20px;
 }
-.bottom_wrapper .message_input_wrapper #chat-message-input {
+.bottom_wrapper .message_input_wrapper .message_input {
   border: none;
   height: 100%;
   box-sizing: border-box;
@@ -174,7 +172,7 @@ body {
   outline-width: 0;
   color: gray;
 }
-.bottom_wrapper #chat-message-submit {
+.bottom_wrapper .send_message {
   width: 140px;
   height: 50px;
   display: inline-block;
@@ -187,11 +185,11 @@ body {
   text-align: center;
   float: right;
 }
-.bottom_wrapper #chat-message-submit:hover {
+.bottom_wrapper .send_message:hover {
   color: #a3d063;
   background-color: #fff;
 }
-.bottom_wrapper #chat-message-submit .text {
+.bottom_wrapper .send_message .text {
   font-size: 18px;
   font-weight: 300;
   display: inline-block;
@@ -207,7 +205,7 @@ body {
 
 </head>
 <body>
-<div id="chat-log">
+<div class="chat_window">
     <div class="top_menu">
         <div class="buttons">
             <div class="button close"></div>
@@ -219,9 +217,9 @@ body {
     <ul class="messages"></ul>
     <div class="bottom_wrapper clearfix">
         <div class="message_input_wrapper">
-            <input id="chat-message-input" placeholder="Type your message here..." />
+            <input class="message_input" placeholder="Type your message here..." />
         </div>
-        <div id="chat-message-submit">
+        <div class="send_message">
             <div class="icon"></div>
             <div class="text">Send</div>
         </div>
@@ -235,42 +233,64 @@ body {
         </div>
     </li>
 </div>
-{{ room_name|json_script:"room-name" }}
-    <script>
-        const roomName = JSON.parse(document.getElementById('room-name').textContent);
-
-        const chatSocket = new WebSocket(
-            'ws://'
-            + window.location.host
-            + '/ws/chat/'
-            + roomName
-            + '/'
-        );
-
-        chatSocket.onmessage = function(e) {
-            const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n');
+<script type="text/javascript">
+  (function () {
+    var Message;
+    Message = function (arg) {
+        this.text = arg.text, this.message_side = arg.message_side;
+        this.draw = function (_this) {
+            return function () {
+                var $message;
+                $message = $($('.message_template').clone().html());
+                $message.addClass(_this.message_side).find('.text').html(_this.text);
+                $('.messages').append($message);
+                return setTimeout(function () {
+                    return $message.addClass('appeared');
+                }, 0);
+            };
+        }(this);
+        return this;
+    };
+    $(function () {
+        var getMessageText, message_side, sendMessage;
+        message_side = 'right';
+        getMessageText = function () {
+            var $message_input;
+            $message_input = $('.message_input');
+            return $message_input.val();
         };
-
-        chatSocket.onclose = function(e) {
-            console.error('Chat socket closed unexpectedly');
-        };
-
-        document.querySelector('#chat-message-input').focus();
-        document.querySelector('#chat-message-input').onkeyup = function(e) {
-            if (e.keyCode === 13) {  // enter, return
-                document.querySelector('#chat-message-submit').click();
+        sendMessage = function (text) {
+            var $messages, message;
+            if (text.trim() === '') {
+                return;
             }
+            $('.message_input').val('');
+            $messages = $('.messages');
+            message_side = message_side === 'left' ? 'right' : 'left';
+            message = new Message({
+                text: text,
+                message_side: message_side
+            });
+            message.draw();
+            return $messages.animate({ scrollTop: $messages.prop('scrollHeight') }, 300);
         };
-
-        document.querySelector('#chat-message-submit').onclick = function(e) {
-            const messageInputDom = document.querySelector('#chat-message-input');
-            const message = messageInputDom.value;
-            chatSocket.send(JSON.stringify({
-                'message': message
-            }));
-            messageInputDom.value = '';
-        };
-    </script>
+        $('.send_message').click(function (e) {
+            return sendMessage(getMessageText());
+        });
+        $('.message_input').keyup(function (e) {
+            if (e.which === 13) {
+                return sendMessage(getMessageText());
+            }
+        });
+        sendMessage('Hello! :)');
+        setTimeout(function () {
+            return sendMessage('Hi User! How are you?');
+        }, 1000);
+        return setTimeout(function () {
+            return sendMessage('I\'m fine, thank you!');
+        }, 2000);
+    });
+}.call(this));
+</script>
 </body>
 </html>
